--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "start": "concurrently \"react-scripts start\" \"json-server --watch characters.json --port 3001\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "git push heroku main"
   },
   "eslintConfig": {
     "extends": [
